Fix squished button on <LandingPage>

--- a/src/containers/LandingPage/LandingPage.css
+++ b/src/containers/LandingPage/LandingPage.css
@@ -1,6 +1,6 @@
 .LandingPage-Hero-image {
     width: 100%;
-    height: 100%;
+    flex-grow: 1;
     background-position: center center;
     background-size: cover;
 }
